# px4_ego

./: .gitignore  AGENTS.md  README.md  example.html  mode_key.py
src/detect/: package.xml  setup.py
src/detect/detect/: target_detector_node.py
src/llm_ros2_agent/: package.xml  setup.cfg  setup.py
src/llm_ros2_agent/config/: voice_command_min.yaml
src/llm_ros2_agent/launch/: voice_command.launch.py
src/llm_ros2_agent/llm_ros2_agent/: feishu_bridge.py  model_parser.py  n8n_result_bridge.py  report_generator.py  voice_command.py
src/px4_bridge_cpp/: CMakeLists.txt  package.xml
src/px4_bridge_cpp/src/: cmd_vel_to_pos_cmd.cpp  depth_gz_bridge.cpp  gazebo_truth_to_visual_odometry.cpp  lidar_gz_bridge.cpp  lidar_points_to_world.cpp
src/px4_ego_py/: package.xml  setup.py
src/px4_ego_py/config/: nav2_params.yaml  nav2_params_perfect.yaml  ros_gz_bridge_depth.yaml  ros_gz_bridge_lidar.yaml  ros_gz_bridge_lidar_depth.yaml  ros_gz_bridge_lidar_depth_3d.yaml
src/px4_ego_py/launch/: ds5_mode_teleop.launch.py  lidar_3d_offboard_position_mode.launch.py  nav2.launch.py
src/px4_ego_py/launch/sim/: px4_sitl_ros2.launch.py  px4_sitl_ros2_lidar.launch.py
src/px4_ego_py/map/: room.pgm  room.yaml
src/px4_ego_py/px4_ego_py/: cmd_vel_to_pos_cmd.py  ds5_mode_teleop.py  lidar_points_to_world.py  odom_to_tf_publisher.py  offboard_control_test.py  websocket_bridge.py
src/px4_ego_py/scripts/: simulation-gazebo
src/px4_ego_py/urdf/: px4_frame_links.urdf
src/px4_odom_tf/: CMakeLists.txt  package.xml
src/px4_odom_tf/src/: px4_odom_tf_publisher.cpp
