<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_odom_tf</name>
  <version>0.0.0</version>
  <description>Publish odom to base_link TF from PX4 local position.</description>
  <maintainer email="dongnanhu6556@gmail.com">hdn</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rosgraph_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
